# crouton-usage

./: .gitignore  LICENSE  README.md  app.db  database.py  req-zo.txt  req.txt  requirements_dev.txt  requirements_refactor.txt
.github/workflows/: build-and-publish.yml
Dockerfiles/: Dockerfile.dev  Dockerfile.refactor
deployment/: docker-compose-refactor.yml  docker-compose.yml  requirements_dev.txt
deployment/Dockerfiles/: Dockerfile.dev
deployment/src/: app_database.py  crouton.sqlite3  database.py  depends.py  main.py  memory.py
deployment/src/models/: __init__.py  models.py
deployment/src/schemas/: __init__.py  schemas.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
pkg/: pyproject.toml  setup.py
pkg/crouton/: __init__.py  pyproject.toml
pkg/crouton-client/: pyproject.toml
pkg/crouton-client/crouton-client/: main.py
pkg/crouton/core/: __init__.py
pkg/crouton/crouton/: __init__.py
pkg/crouton/tests/implementations/: __init__.py
pkg/crouton_client/: README.md  pyproject.toml
pkg/crouton_client/tests/: test_base.py
pkg/swarmauri-api-crudrouter/core/: _utils.py
pkgs/crouton/: pyproject.toml
pkgs/crouton/crouton/core/: _base.py  sqlalchemy.py
pkgs/crouton_client/: pyproject.toml
pkgs/crouton_client/crouton_client/: UUID.py  __init__.py  async.py  blocking.py  main.py
pkgs/crouton_client/tests/: conftest.py
