[tool.poetry]
name = "swarmauri-api-crudrouter"
version = "0.0.1"
description = "A repository to enable API CRUD Routing"
authors = ["Jacob Stewart <jacob@swarmauri.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/swarmauri/swarmauri-api-crudrouter"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
fastapi>=0.62.0

[tool.poetry.dev-dependencies]
flake8 = "^7.0"  # Add flake8 as a development dependency
pytest = "^8.0"  # Ensure pytest is also added if you run tests
pytest-asyncio = ">=0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
